package com.cafepos.catalog;

import com.cafepos.common.Money;

public interface Priced {
  Money price();
}
